2014-08-13  Alex Christensen  <achristensen@webkit.org>

        Progress towards CMake on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=135819

        Reviewed by Laszlo Gombos.

        * CMakeLists.txt:
        Include derived sources directory, which is needed by Apple ports.
        Separated svg and non-svg idls for ObjC bindings.
        Don't build the new gamepad API right now.  It's causing naming conflicts and it's not done.
        Process CSSUnknownRule.idl.
        * PlatformGTK.cmake:
        Added cpp as the extension of the generated bindings.
        * PlatformMac.cmake:
        Include more directories and sources.
        Add forwarding headers.
        Generate ObjC bindings.
        * bindings/objc/DOMUIKitExtensions.mm:
        Moved config.h to recognize the PLATFORM macro.
        * bindings/scripts/CodeGeneratorObjC.pm:
        (ReadPublicInterfaces):
        (GenerateInterface):
        Added some workarounds for CMake.
        * bindings/scripts/IDLAttributes.txt:
        Added missing attribute names.
        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
        Added PLATFORM(IOS) to protect IOS_AIRPLAY code.
        * platform/mac/PasteboardMac.mm:
        Added necessary DRAG_SUPPORT protection.
        * platform/text/mac/TextCodecMac.cpp:
        Moved config.h to recognize the PLATFORM macro.        

2014-08-13  Jer Noble  <jer.noble@apple.com>

        [MSE] Replacing existing samples with overlapping new samples will cause playback to stutter.
        https://bugs.webkit.org/show_bug.cgi?id=135902

        Reviewed by Eric Carlson.

        Only mark the TrackBuffer as needing re-enqueueing if the samples removed by overlapping samples
        themselves overlap with potentially enqueued but not yet displayed frames.

        * Modules/mediasource/SourceBuffer.cpp:
        (WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample):

2014-08-13  Andreas Kling  <akling@apple.com>
