@@ -89,14 +89,6 @@
 #define APPKIT_PRIVATE_CLASS
 #endif
 
-#if __has_include(<AppKit/NSServicesRolloverButtonCell.h>)
-#import <AppKit/NSServicesRolloverButtonCell.h>
-#endif
-
-@interface NSServicesRolloverButtonCell (Details)
-+ (NSServicesRolloverButtonCell *)serviceRolloverButtonCellForStyle:(NSSharingServicePickerStyle)style;
-@end
-
 #if __has_include(<AppKit/NSSharingService_Private.h>)
 #import <AppKit/NSSharingService_Private.h>
 #else
@@ -104,6 +96,18 @@ typedef enum {
     NSSharingServicePickerStyleRollover = 1
 } NSSharingServicePickerStyle;
 #endif
+
+#if __has_include(<AppKit/NSServicesRolloverButtonCell.h>)
+#import <AppKit/NSServicesRolloverButtonCell.h>
+#else
+@interface NSServicesRolloverButtonCell : NSButtonCell
+@end
+#endif
+
+@interface NSServicesRolloverButtonCell (Details)
++ (NSServicesRolloverButtonCell *)serviceRolloverButtonCellForStyle:(NSSharingServicePickerStyle)style;
+- (NSRect)rectForBounds:(NSRect)bounds preferredEdge:(NSRectEdge)preferredEdge;
+@end
 
 #endif // ENABLE(SERVICE_CONTROLS)
 
