@@ -1,3 +1,11 @@
+2014-08-13  Mark Rowe  <mrowe@apple.com>
+
+        <https://webkit.org/b/135911> WebKit should build on Yosemite with the public SDK.
+
+        Reviewed by Darin Adler.
+
+        * Misc/WebSharingServicePickerController.mm: Forward-declare some details related to NSSharingServicePicker.
+
 2014-08-13  Timothy Hatcher  <timothy@apple.com>
 
         Web Inspector: Workaround a NSWindow change to the title bar.
